tests/errors/E030.zen
void main() {
    @println(3);   // E030: Type mismatch in argument provided to an intrinsic function.
}